# TeA

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  build.gradle  pom.xml  settings.gradle
_assembly/: application.bndrun  pom.xml  readme.md
_distro/: pom.xml
_index/: pom.xml  readme.md
bddbddb/: build.gradle
cfg/: build.gradle
cnf/: build.bnd
cnf/ext/: central.mvn  repositories.bnd  test.bnd
com.neuromancer42.tea.applications.callgraph/: bnd.bnd  com.neuromancer42.tea.applications.callgraph.bndrun  com.neuromancer42.tea.applications.callgraph_debug.bndrun
com.neuromancer42.tea.applications.callgraph/resources/: funcptrs.0.c  funcptrs.1.c  funcptrs.2.c  funcptrs.3.c  latex2rtf-2.1.1.c.instrumented
com.neuromancer42.tea.applications.cinterval/: bnd.bnd  com.neuromancer42.tea.applications.cinterval.bndrun  com.neuromancer42.tea.applications.cinterval_debug.bndrun
com.neuromancer42.tea.applications.cinterval/resources/: cipa_cg.dl  demo0.c
com.neuromancer42.tea.bddbddb/: bnd.bnd  pom.xml
com.neuromancer42.tea.bddbddb.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.bddbddb.tests.bndrun
com.neuromancer42.tea.core/: bnd.bnd  pom.xml
com.neuromancer42.tea.core.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.core.tests.bndrun  pom.xml
com.neuromancer42.tea.libdai/: bnd.bnd  build.gradle
com.neuromancer42.tea.libdai.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.libdai.tests.bndrun
com.neuromancer42.tea.program.cdt/: bnd.bnd
com.neuromancer42.tea.program.cdt.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.program.cdt.tests.bndrun  debug.options
com.neuromancer42.tea.program.cdt.tests/resources/: aplusb.c  aplusb.ll  array.c  array.ll  assign.h  example.h  goto.c  goto.ll  struct.c  struct.ll
com.neuromancer42.tea.program.llvm/: bnd.bnd
com.neuromancer42.tea.program.llvm.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.program.llvm.tests.bndrun
com.neuromancer42.tea.program.llvm.tests/resources/: aplusb.c
com.neuromancer42.tea.souffle/: bnd.bnd  build.gradle
com.neuromancer42.tea.souffle.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.souffle.tests.bndrun
com.neuromancer42.tea.souffle.tests/resources/: simple.dl
com.neuromancer42.tea.souffle/swig/: souffle-swig-interface.h  souffle-swig-interface.i
com.neuromancer42.tea.tests/: bnd.bnd  build.gradle  com.neuromancer42.tea.tests.bndrun
com.neuromancer42.tea.tests/resources/: aplusb.c  cipa_cg.dl  cipt-cg.dl  demo0.c  interval.dl  pre-pt.dl  pre_pt.dl
core/: build.gradle
datalog/provenance/: java-ci-taint-dlog_XZ89_.config  java-ci-taint-dlog_XZ89_.dlog
example_configs/: bc.inputs  bc_rank_sqz.ini  call_graph.ini  interval_debug.ini  interval_rank_random.ini  interval_rank_sqz_random.ini  interval_rank_sqz_random_em.ini  random.inputs
example_configs/bc-inputs/: array.txt  divide.txt  (+2 more)
examples/: bc_rank_sqz.ini  interval_rank_random.ini  interval_rank_sqz_random.ini
ir/: cfg.proto  expr.proto
libdai/: build.gradle
local_scripts/: call_graph.sh  example_cmds.list  interval.sh  test-llvm.sh
scripts/: call_graph.ini  call_graph.sh  example_cmds.list  interval.dists  interval.ini  interval.sh  interval_rank.ini  interval_rank_sqz.ini
souffle/: build.gradle
souffle-scripts/: cipa_cg.dl
tea-absdomain/: build.gradle
tea-cdt-codemanager/: build.gradle  compile-bundles.list  repo.bndrun  runtime-bundles.list  update_bundles.sh
tea-clients/: basic_client.py  update_proto.sh
tea-commons/: build.gradle
tea-core/: build.gradle
tea-jlibdai/: build.gradle
tea-jsouffle/: build.gradle
tea-jsouffle/swig/: CMakeLists.txt  souffle-swig-interface.h
tea-memmodel/: build.gradle
(+514 files in other folders)
